# rules_apt

./: README.md
.github/workflows/: ci.yaml  release_prep.sh
apt/: extensions.bzl
apt/private/: BUILD.bazel  LAYER_BUILD.template.bazel  REPO_BUILD.template.bazel  packages.template.bzl  repository.bzl
apt/private/lockfile_generator/: config.py
docs/: packages_yaml.md  repository.md
e2e/smoke/: BUILD.bazel  MODULE.bazel  debian-snapshots.yaml  ubuntu-snapshots.yaml
examples/rules_oci/: MODULE.bazel
